Harden and Nix-package the Grit FFM boundary